# dora_nav_crawl

./: .gitignore  README.md  dataflow-graph-工控机.html
dora_ws/: .gitattributes  .gitignore  AGENTS.md
dora_ws/dora_robot_single/: .gitignore  CMakeLists.txt  README.md  README_ROBOT.md  build.sh  dataflow-graph.html  dataflow.yml  dora_camera_intrinsics.json  example_dataflow.yml  read_realsense_intrinsics.py
dora_ws/dora_robot_single/.cargo/: config.toml
dora_ws/dora_robot_single/.marscode/: deviceInfo.json
dora_ws/dora_robot_single/python_nodes/: parse_bbox.py  pick-place-rm65.py
dora_ws/dora_robot_single/python_nodes/dora-camera-net/: README.md  pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-camera-net/dora_camera_net/: __init__.py  main.py
dora_ws/dora_robot_single/python_nodes/dora-camera-net/dora_camera_net.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dora_ws/dora_robot_single/python_nodes/dora-distil-whisper/: pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-distil-whisper/dora_distil_whisper/: main.py
dora_ws/dora_robot_single/python_nodes/dora-distil-whisper/dora_distil_whisper.egg-info/: PKG-INFO  requires.txt
dora_ws/dora_robot_single/python_nodes/dora-microphone/: pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-microphone/dora_microphone/: main.py
dora_ws/dora_robot_single/python_nodes/dora-microphone/dora_microphone.egg-info/: PKG-INFO  requires.txt
dora_ws/dora_robot_single/python_nodes/dora-object-to-pose/: Cargo.toml  pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-object-to-pose/src/: lib.rs
dora_ws/dora_robot_single/python_nodes/dora-qwen2-5-vl/: pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-qwen2-5-vl/dora_qwen2_5_vl/: main.py
dora_ws/dora_robot_single/python_nodes/dora-qwen2-5-vl/dora_qwen2_5_vl.egg-info/: PKG-INFO  requires.txt
dora_ws/dora_robot_single/python_nodes/dora-rm65/: pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-rm65/dora_rm65/: arm.py  gemini335.py
dora_ws/dora_robot_single/python_nodes/dora-rm65/dora_rm65.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dora_ws/dora_robot_single/python_nodes/dora-vad/: pyproject.toml
dora_ws/dora_robot_single/python_nodes/dora-vad/dora_vad/: main.py
dora_ws/dora_robot_single/python_nodes/dora-vad/dora_vad.egg-info/: PKG-INFO  requires.txt
dora_ws/dora_robot_single/python_nodes/visualization_node/: setup.py
dora_ws/dora_robot_single/python_nodes/visualization_node/visualization_node/: __init__.py  main.py
dora_ws/dora_robot_single/python_nodes/visualization_node/visualization_node.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dora_ws/dora_robot_single/utils/: CMakeLists.txt
dora_ws/dora_robot_single/utils/event_loop/cpp/: CCDoraEventLoop.h
dora_ws/dora_robot_single/utils/event_loop/python/: README.md  setup.py
dora_ws/dora_robot_single/utils/event_loop/python/cc_dora_event_loop/: __init__.py  event_loop.py
dora_ws/dora_robot_single/utils/event_loop/python/cc_dora_event_loop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dora_ws/hand_eye_calibration-main/: RobotToolPose.csv  config.yaml
dora_ws/hand_eye_calibration-main/eye_hand_data/data20250912/: poses.txt
dora_ws/hand_eye_calibration-main/eye_hand_data/data2025091201/: poses.txt
dora_ws/hand_eye_calibration-main/libs/: auxiliary.py  web-log
keda/: CMakeLists.txt  MID360_config.json  Waypoints.txt  lidartest.yml  load_path.yml  lubao.sh  road_msg.txt  run.yml  test.py
keda/HWT9053modbus/: CMakeLists.txt  CMakeLists_old.txt  HPKBUILD  data.yml  last_error
keda/HWT9053modbus/include/: msg.h
keda/HWT9053modbus/src/: main.cpp  serial.cpp
keda/control/vehicle_control/lat_controller/: interface_lat.cpp  pure_pursuit.cpp
keda/control/vehicle_control/lon_controller/: interface_lon.cpp
keda/control/vehicle_control/lon_controller/include/: lon_controller.h
keda/control/vehicle_control/mick/: CMakeLists.txt  adora_chassis_a2pro_dora_node.cc  mickx4_bringup_v3_node.cc
keda/control/vehicle_control/mick/include/: chassis_mick_msg.hpp  geomsgs_twist_msg.h  ros_dt_control.h  ros_dt_msg.h
keda/data/: map.pcd
keda/data/path/: show.py  trajectory.txt
keda/dora-hdl_localization/: CMakeLists.txt
keda/dora-hdl_localization/src/: dora_hdl_node.cpp
keda/livox/: CMakeLists.txt
keda/livox/src/: lddc_dora.cpp  lddc_dora.txt  lds.cpp  lds_lidar.cpp  livox_dora_driver2.cpp
keda/map/pub_road/src/: pubroad.cpp
keda/map/road_line_publisher/: road_lane.cpp
keda/planning/mission_planning/task_pub/: main.cpp  pub_main.cpp
keda/planning/mission_planning/task_pub/include/: read_mysql_core.h
keda/planning/routing_planning/: frenet.cpp  node_routing_core.cpp  pathplanning.cpp  planning_path_to_ros2.py
keda/planning/routing_planning/include/: node_routing_core.h
keda/rerun/: CMakeLists.txt
keda/rerun/src/: points_to_rerun.cpp  rerun_test.cpp
robot_camera_sender/: README.md  main.py  realsense_tcp_sender.py
slam/: launch.sh
slam/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
slam/devel/include/hdl_graph_slam/: DumpGraphRequest.h  DumpGraphResponse.h  FloorCoeffs.h  LoadGraphRequest.h  LoadGraphResponse.h  SaveMapRequest.h  SaveMapResponse.h  ScanMatchingStatus.h
slam/devel/lib/fast_gicp/: gicp_align  gicp_kitti
slam/devel/lib/hdl_graph_slam/: bag_player.py  ford2bag.py  map2odom_publisher.py
slam/devel/lib/ndt_omp/: align
slam/devel/lib/pkgconfig/: fast_gicp.pc  hdl_graph_slam.pc  ndt_omp.pc
slam/devel/share/fast_gicp/cmake/: fast_gicpConfig.cmake
slam/devel/share/hdl_graph_slam/cmake/: hdl_graph_slam-msg-extras.cmake  hdl_graph_slam-msg-paths.cmake  hdl_graph_slamConfig.cmake
slam/devel/share/ndt_omp/cmake/: ndt_ompConfig.cmake
slam/src/: mapSave.txt
slam/src/hdl_graph_slam/: CMakeLists.txt
slam/src/hdl_graph_slam/launch/: hdl_graph_slam.launch  hdl_graph_slam_400.launch  hdl_graph_slam_501.launch  my_robot.launch
(+3 files in other folders)
