[project]
name = "dora-rm65"
version = "0.3.11"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "dora-rm65"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dora-rs >= 0.3.9",

    "scipy",
] # Make reachy2 sdk version configurable

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
dora-rm65-gemini335 = "dora_rm65.gemini335:main"
dora-rm65-arm = "dora_rm65.arm:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dora_rm65*"]
namespaces = false

[tool.ruff.lint]
extend-select = [
  "D",    # pydocstyle
  "UP",   # Ruff's UP rule
  "PERF", # Ruff's PERF rule
  "RET",  # Ruff's RET rule
  "RSE",  # Ruff's RSE rule
  "NPY",  # Ruff's NPY rule
  "N",    # Ruff's N rule
  "I",    # Ruff's I rule
]
